[gd_scene load_steps=5 format=3 uid="uid://dxdio4tm7d277"]

[ext_resource type="Script" path="res://Script/plant_5.gd" id="1_y8rem"]
[ext_resource type="Texture2D" uid="uid://bvwwr1ljdpww1" path="res://Art Assets/Growth/Plant Growth Spite_22.png" id="2_8fchh"]
[ext_resource type="AudioStream" uid="uid://bsm63o8m8k2nb" path="res://Audio/Harvest.mp3" id="3_jd1uw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20j20"]
size = Vector2(87, 132)

[node name="Plant5" type="Node2D"]
script = ExtResource("1_y8rem")

[node name="PlantBody" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_8fchh")

[node name="HarvestArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvestArea2D"]
position = Vector2(-7.5, 14)
shape = SubResource("RectangleShape2D_20j20")

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jd1uw")

[connection signal="input_event" from="HarvestArea2D" to="." method="_on_harvest_area_2d_input_event"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
